--- a/index.html
+++ b/index.html
@@ -45,12 +45,23 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/lib/jquery.mask.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.maskMoney.min.js"></script>
+
+    <!-- Services -->
+
     <script type="text/javascript" src="js/services/secretaria_service.js"></script>
-    <script src="js/controllers/secretaria_controller.js"></script>
+    <script type="text/javascript" src="js/services/cargo_service.js"></script>
     <script type="text/javascript" src="js/services/unidade_service.js"></script>
-    <script src="js/controllers/unidade_controller.js"></script>
     <script type="text/javascript" src="js/services/simbologia_service.js"></script>
+
+
+    <!-- Controllers -->
+    <script src="js/controllers/secretaria_controller.js"></script>
+    <script src="js/controllers/unidade_controller.js"></script>
     <script src="js/controllers/simbologia_controller.js"></script>
+    <script src="js/controllers/cargo_controller.js"></script>
+
+
+
     <script type="text/javascript" src="js/vendor/abas.js"></script>
 </head>
 <body>
