--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         }
     </style>
 
-    <!--<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>-->
-
-
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <!--<script type="text/javascript" src="js/lib/angular.min.js"></script>-->
     <script type="text/javascript" src="js/lib/angular-route.js"></script>
