--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script type="text/javascript" src="js/services/cargo_service.js"></script>
     <script type="text/javascript" src="js/services/unidade_service.js"></script>
     <script type="text/javascript" src="js/services/simbologia_service.js"></script>
+    <script type="text/javascript" src="js/services/servidor_service.js"></script>
 
 
     <!-- Controllers -->
@@ -60,6 +61,7 @@
     <script src="js/controllers/unidade_controller.js"></script>
     <script src="js/controllers/simbologia_controller.js"></script>
     <script src="js/controllers/cargo_controller.js"></script>
+    <script src="js/controllers/servidor_controller.js"></script>
 
 
 
